correction case NO_DATE

--- a/notebooks/early_correction_loop.ipynb
+++ b/notebooks/early_correction_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,6 @@
     "    #print(div_interested)\n",
     "    ##title + date\n",
     "    title_date = div_interested.find('h2', class_='title').contents[0]\n",
-    "\n",
     "    dateFilms= []\n",
     "    titles = []\n",
     "    filmLenghts= []\n",
@@ -42,10 +41,14 @@
     "\n",
     "    ##*************Film date***************\n",
     "    date_film =re.search('(\\d+)',title_date)\n",
-    "    dateFilms.append(date_film.group())\n",
-    "    ##*************Film title***************\n",
-    "    title = title_date.split(\"(\"+date_film.group())\n",
-    "    titles.append(title[0].lstrip().rstrip())\n",
+    "    if(date_film):\n",
+    "        dateFilms.append(date_film.group())\n",
+    "        ##*************Film title***************\n",
+    "        title = title_date.split(\"(\"+date_film.group())\n",
+    "        titles.append(title[0].lstrip().rstrip())\n",
+    "    else:\n",
+    "        dateFilms.append(\"NO_DATE\")\n",
+    "        titles.append(title_date)\n",
     "\n",
     "    #****************Film Lenght*************************\n",
     "    #can have more than one parameter \n",
@@ -298,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -335,13 +338,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1910</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ab vom rechten Wege</td>\n",
-       "      <td>*GB England ohne Produktionsangabe {uk} (Großb...</td>\n",
-       "      <td>*215 Meter</td>\n",
-       "      <td>*215,00 Mark*17,00 Mark (Surcharge for Colour)</td>\n",
+       "      <td>NO_DATE</td>\n",
+       "      <td>495</td>\n",
+       "      <td>\\r\\n  Angriff auf Poithmouth</td>\n",
+       "      <td>*k.Ang. (?)</td>\n",
+       "      <td>*241 Meter</td>\n",
        "      <td></td>\n",
+       "      <td>*Nicht-fiktional</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -349,28 +352,25 @@
        "</div>"
       ],
       "text/plain": [
-       "   Date id early database                Title  \\\n",
-       "0  1910                 3  Ab vom rechten Wege   \n",
+       "      Date id early database                         Title    Companies  \\\n",
+       "0  NO_DATE               495  \\r\\n  Angriff auf Poithmouth  *k.Ang. (?)   \n",
        "\n",
-       "                                           Companies Film lenght  \\\n",
-       "0  *GB England ohne Produktionsangabe {uk} (Großb...  *215 Meter   \n",
-       "\n",
-       "                                     Film pricing Genre All titles  \n",
-       "0  *215,00 Mark*17,00 Mark (Surcharge for Colour)                   "
+       "  Film lenght Film pricing             Genre All titles  \n",
+       "0  *241 Meter               *Nicht-fiktional             "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "create_df_film(3)\n"
+    "create_df_film(495)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "      <td>*Pathé Frères, Paris (s.a. Thepa) {fr} &lt;Pathe&gt;...</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>Nicht-fiktional</td>\n",
+       "      <td>*Nicht-fiktional</td>\n",
        "      <td>*Original Title:*Industrie de l' abaca à l' îl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -427,11 +427,11 @@
        "                                           Companies Film lenght Film pricing  \\\n",
        "0  *Pathé Frères, Paris (s.a. Thepa) {fr} <Pathe>...                            \n",
        "\n",
-       "             Genre                                         All titles  \n",
-       "0  Nicht-fiktional  *Original Title:*Industrie de l' abaca à l' îl...  "
+       "              Genre                                         All titles  \n",
+       "0  *Nicht-fiktional  *Original Title:*Industrie de l' abaca à l' îl...  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,15 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2019-10-24 17:18:54.210494\n",
-      "finish 2019-10-24 17:20:58.121058\n"
+      "start 2019-10-24 19:56:52.816279\n"
      ]
     }
    ],
@@ -466,14 +465,14 @@
     "\n",
     "\n",
     "print(\"start\",datetime.now())   \n",
-    "for i in range(1,100): \n",
+    "for i in range(99,10000): \n",
     "    try:\n",
     "        df=df.append(create_df_film(i),sort=False,ignore_index=True)\n",
     "        time.sleep(1)\n",
     "    except:\n",
     "        print(\"problem with id\" , str(i))\n",
     "        raise\n",
-    "df.to_csv('export_early_cinema.csv')\n",
+    "df.to_csv('export_early_cinema_10000.csv')\n",
     "\n",
     "print(\"finish\",datetime.now())"
    ]
