exception for urllib.error.URLError

--- a/notebooks/early_correction_loop.ipynb
+++ b/notebooks/early_correction_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,210 +21,158 @@
     "    # specify which URL/web page we are going to be scraping\n",
     "    url = \"http://earlycinema.dch.phil-fak.uni-koeln.de/films/view/\" + str(id)\n",
     "    # open the url using urllib.request and put the HTML into the page variable\n",
-    "    page = urllib.request.urlopen(url)\n",
-    "    # parse the HTML from our URL into the BeautifulSoup parse tree format\n",
-    "    soup = BeautifulSoup(page, \"lxml\")\n",
-    "    #the div where the information is\n",
-    "    div_interested = soup.find('div', id='frame1update')\n",
-    "    \n",
-    "    #print(div_interested)\n",
-    "    ##title + date\n",
-    "    title_date = div_interested.find('h2', class_='title').contents[0]\n",
-    "    dateFilms= []\n",
-    "    titles = []\n",
-    "    filmLenghts= []\n",
-    "    filmPricings= []\n",
-    "    filmAllTitles= []\n",
-    "    #filmCountries= []\n",
-    "    filmCompanies= []\n",
-    "    filmGenres= []\n",
+    "    #catch exception some case id doesn't exist cf 970\n",
+    "    try:\n",
+    "        page = urllib.request.urlopen(url)\n",
+    "        # parse the HTML from our URL into the BeautifulSoup parse tree format\n",
+    "        soup = BeautifulSoup(page, \"lxml\")\n",
+    "        #the div where the information is\n",
+    "        div_interested = soup.find('div', id='frame1update')\n",
     "\n",
-    "    ##*************Film date***************\n",
-    "    date_film =re.search('(\\d+)',title_date)\n",
-    "    if(date_film):\n",
-    "        dateFilms.append(date_film.group())\n",
-    "        ##*************Film title***************\n",
-    "        title = title_date.split(\"(\"+date_film.group())\n",
-    "        titles.append(title[0].lstrip().rstrip())\n",
-    "    else:\n",
-    "        dateFilms.append(\"NO_DATE\")\n",
-    "        titles.append(title_date)\n",
+    "        #print(div_interested)\n",
+    "        ##title + date\n",
+    "        title_date = div_interested.find('h2', class_='title').contents[0]\n",
+    "        dateFilms= []\n",
+    "        titles = []\n",
+    "        filmLenghts= []\n",
+    "        filmPricings= []\n",
+    "        filmAllTitles= []\n",
+    "        #filmCountries= []\n",
+    "        filmCompanies= []\n",
+    "        filmGenres= []\n",
     "\n",
-    "    #****************Film Lenght*************************\n",
-    "    #can have more than one parameter \n",
-    "    #example film id=6\n",
-    "    #<ul>\n",
-    "    #      <li>\n",
-    "    #    4000 Bilder [Bilderzahl entspricht 77_m]              </li>\n",
-    "    #      <li>\n",
-    "    #    80 Meter [Bilderzahl entspricht 77_m]              </li>\n",
-    "    #  </ul>\n",
-    "    lenght = \"\"\n",
-    "    film_lenght_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Film Length\"]\n",
-    "    if(film_lenght_element):\n",
-    "        ul_film_lenght = film_lenght_element[0].next_sibling.next_sibling\n",
-    "        if(ul_film_lenght.name == 'ul'):\n",
-    "            for li in ul_film_lenght.findAll('li'):\n",
-    "                if li.find('ul'):\n",
-    "                    break\n",
-    "                lenght=lenght +\"*\"+ li.text.lstrip().rstrip()\n",
-    "            filmLenghts.append(lenght)       \n",
-    "    else:\n",
-    "        filmLenghts.append(\"\") \n",
-    "    #*********************Pricing**************************\n",
-    "    pricing=\"\"\n",
-    "    film_pricing_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Pricing\"]\n",
-    "    if(film_pricing_element):\n",
-    "        ul_film_pricing = film_pricing_element[0].next_sibling.next_sibling\n",
-    "        if(ul_film_pricing.name == 'ul'):\n",
-    "            for li in ul_film_pricing.findAll('li'):\n",
-    "                if li.find('ul'):\n",
-    "                    break\n",
-    "                pricing=pricing +\"*\"+ li.text.lstrip().rstrip()\n",
-    "            filmPricings.append(pricing)  \n",
-    "    else:       \n",
-    "        filmPricings.append(\"\") \n",
-    "    #*******************All titles**********************\n",
-    "    title=\"\"\n",
-    "    film_alltitle_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Film titles\"]\n",
-    "    if(film_alltitle_element):    \n",
-    "        ul_film_alltitle = film_alltitle_element[0].next_sibling.next_sibling\n",
-    "        if(ul_film_alltitle.name == 'ul'):\n",
-    "            for li in ul_film_alltitle.findAll('li'):\n",
-    "                if li.find('ul'):\n",
-    "                    break\n",
-    "                for span in li.findAll('span'):\n",
-    "                    title=title +\"*\"+ span.text.lstrip().rstrip()\n",
-    "            filmAllTitles.append(title)  \n",
-    "    else:\n",
-    "        filmAllTitles.append(\"\") \n",
-    "    \n",
-    "    #*******************Companies - Countries******************\n",
-    "    companie=\"\"\n",
-    "    film_companie_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Companies\"]\n",
-    "    if(film_companie_element):\n",
+    "        ##*************Film date***************\n",
+    "        date_film =re.search('(\\d+)',title_date)\n",
+    "        if(date_film):\n",
+    "            dateFilms.append(date_film.group())\n",
+    "            ##*************Film title***************\n",
+    "            title = title_date.split(\"(\"+date_film.group())\n",
+    "            titles.append(title[0].lstrip().rstrip())\n",
+    "        else:\n",
+    "            dateFilms.append(\"NO_DATE\")\n",
+    "            titles.append(title_date)\n",
     "\n",
-    "        ul_film_companie = film_companie_element[0].next_sibling.next_sibling\n",
-    "        #print(ul_film_companie)\n",
-    "        if(ul_film_companie.name == 'ul'):        \n",
-    "            for a in ul_film_companie.findAll('a'):\n",
-    "                if a.find('ul'):\n",
-    "                    break\n",
-    "                film_country =re.search('{.*}',a.text.lstrip().rstrip())\n",
-    "                #if(film_country):\n",
-    "                #    filmCountries.append(film_country.group().replace('{',\"\").replace('}',\"\"))\n",
-    "                #else:\n",
-    "                #    filmCountries.append(\"\")\n",
-    "                companie = companie + \"*\" + a.text.lstrip().rstrip()\n",
-    "            filmCompanies.append(companie)  \n",
-    "    else:\n",
-    "        filmCompanies.append(\"\") \n",
-    "        #filmCountries.append(\"\")\n",
-    "    #*****************Film Genres*******************\n",
-    "    genre=''\n",
-    "    film_genre_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Genres\"]\n",
-    "    if(film_genre_element):\n",
-    "        ul_film_genre = film_genre_element[0].next_sibling.next_sibling\n",
-    "        if(ul_film_genre.name == 'ul'):    \n",
-    "            for a in ul_film_genre.findAll('a'):\n",
-    "                if a.find('ul'):\n",
-    "                    break\n",
-    "                genre=genre +\"*\"+ a.text.lstrip().rstrip()\n",
-    "            try:\n",
-    "                filmGenres.append(genre)\n",
-    "            except(ValueError):\n",
-    "                filmGenres.append(\"ERROR\")  \n",
-    "    else:\n",
-    "        filmGenres.append(\"\") \n",
+    "        #****************Film Lenght*************************\n",
+    "        #can have more than one parameter \n",
+    "        #example film id=6\n",
+    "        #<ul>\n",
+    "        #      <li>\n",
+    "        #    4000 Bilder [Bilderzahl entspricht 77_m]              </li>\n",
+    "        #      <li>\n",
+    "        #    80 Meter [Bilderzahl entspricht 77_m]              </li>\n",
+    "        #  </ul>\n",
+    "        lenght = \"\"\n",
+    "        film_lenght_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Film Length\"]\n",
+    "        if(film_lenght_element):\n",
+    "            ul_film_lenght = film_lenght_element[0].next_sibling.next_sibling\n",
+    "            if(ul_film_lenght.name == 'ul'):\n",
+    "                for li in ul_film_lenght.findAll('li'):\n",
+    "                    if li.find('ul'):\n",
+    "                        break\n",
+    "                    lenght=lenght +\"*\"+ li.text.lstrip().rstrip()\n",
+    "                filmLenghts.append(lenght)       \n",
+    "        else:\n",
+    "            filmLenghts.append(\"\") \n",
+    "        #*********************Pricing**************************\n",
+    "        pricing=\"\"\n",
+    "        film_pricing_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Pricing\"]\n",
+    "        if(film_pricing_element):\n",
+    "            ul_film_pricing = film_pricing_element[0].next_sibling.next_sibling\n",
+    "            if(ul_film_pricing.name == 'ul'):\n",
+    "                for li in ul_film_pricing.findAll('li'):\n",
+    "                    if li.find('ul'):\n",
+    "                        break\n",
+    "                    pricing=pricing +\"*\"+ li.text.lstrip().rstrip()\n",
+    "                filmPricings.append(pricing)  \n",
+    "        else:       \n",
+    "            filmPricings.append(\"\") \n",
+    "        #*******************All titles**********************\n",
+    "        title=\"\"\n",
+    "        film_alltitle_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Film titles\"]\n",
+    "        if(film_alltitle_element):    \n",
+    "            ul_film_alltitle = film_alltitle_element[0].next_sibling.next_sibling\n",
+    "            if(ul_film_alltitle.name == 'ul'):\n",
+    "                for li in ul_film_alltitle.findAll('li'):\n",
+    "                    if li.find('ul'):\n",
+    "                        break\n",
+    "                    for span in li.findAll('span'):\n",
+    "                        title=title +\"*\"+ span.text.lstrip().rstrip()\n",
+    "                filmAllTitles.append(title)  \n",
+    "        else:\n",
+    "            filmAllTitles.append(\"\") \n",
     "\n",
-    "    df=pd.DataFrame(dateFilms,columns=['Date'])\n",
-    "    df['id early database']=str(id)\n",
-    "    df['Title']=titles\n",
-    "    df['Companies']=filmCompanies\n",
-    "   # df['Countries']=filmCountries\n",
-    "    df['Film lenght']=filmLenghts\n",
-    "    df['Film pricing']=filmPricings\n",
-    "    df['Genre']=filmGenres\n",
-    "    df['All titles']=filmAllTitles\n",
-    "    return df\n",
+    "        #*******************Companies - Countries******************\n",
+    "        companie=\"\"\n",
+    "        film_companie_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Companies\"]\n",
+    "        if(film_companie_element):\n",
+    "\n",
+    "            ul_film_companie = film_companie_element[0].next_sibling.next_sibling\n",
+    "            #print(ul_film_companie)\n",
+    "            if(ul_film_companie.name == 'ul'):        \n",
+    "                for a in ul_film_companie.findAll('a'):\n",
+    "                    if a.find('ul'):\n",
+    "                        break\n",
+    "                    film_country =re.search('{.*}',a.text.lstrip().rstrip())\n",
+    "                    #if(film_country):\n",
+    "                    #    filmCountries.append(film_country.group().replace('{',\"\").replace('}',\"\"))\n",
+    "                    #else:\n",
+    "                    #    filmCountries.append(\"\")\n",
+    "                    companie = companie + \"*\" + a.text.lstrip().rstrip()\n",
+    "                filmCompanies.append(companie)  \n",
+    "        else:\n",
+    "            filmCompanies.append(\"\") \n",
+    "            #filmCountries.append(\"\")\n",
+    "        #*****************Film Genres*******************\n",
+    "        genre=''\n",
+    "        film_genre_element = [tag for tag in div_interested.find_all('h3') if tag.text.lstrip().rstrip() == \"Genres\"]\n",
+    "        if(film_genre_element):\n",
+    "            ul_film_genre = film_genre_element[0].next_sibling.next_sibling\n",
+    "            if(ul_film_genre.name == 'ul'):    \n",
+    "                for a in ul_film_genre.findAll('a'):\n",
+    "                    if a.find('ul'):\n",
+    "                        break\n",
+    "                    genre=genre +\"*\"+ a.text.lstrip().rstrip()\n",
+    "                try:\n",
+    "                    filmGenres.append(genre)\n",
+    "                except(ValueError):\n",
+    "                    filmGenres.append(\"ERROR\")  \n",
+    "        else:\n",
+    "            filmGenres.append(\"\") \n",
+    "\n",
+    "        df=pd.DataFrame(dateFilms,columns=['Date'])\n",
+    "        df['id early database']=str(id)\n",
+    "        df['Title']=titles\n",
+    "        df['Companies']=filmCompanies\n",
+    "       # df['Countries']=filmCountries\n",
+    "        df['Film lenght']=filmLenghts\n",
+    "        df['Film pricing']=filmPricings\n",
+    "        df['Genre']=filmGenres\n",
+    "        df['All titles']=filmAllTitles\n",
+    "        return df\n",
+    "    except urllib.error.URLError as e:\n",
+    "        print(e.reason + \"for id \"  + str(id))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>id early database</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Companies</th>\n",
-       "      <th>Film lenght</th>\n",
-       "      <th>Film pricing</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>All titles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1910</td>\n",
-       "      <td>75</td>\n",
-       "      <td>Abgründe</td>\n",
-       "      <td>*Kosmorama {dk} (Dänemark)</td>\n",
-       "      <td>*850 Meter, 2 acts*45 Minuten*772 Meter, 2 acts</td>\n",
-       "      <td></td>\n",
-       "      <td>*Sensationsdrama*Schauspiel*Drama</td>\n",
-       "      <td>*Original Title:*Afgrunden*Further Title:*Fräu...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Date id early database     Title                   Companies  \\\n",
-       "0  1910                75  Abgründe  *Kosmorama {dk} (Dänemark)   \n",
-       "\n",
-       "                                       Film lenght Film pricing  \\\n",
-       "0  *850 Meter, 2 acts*45 Minuten*772 Meter, 2 acts                \n",
-       "\n",
-       "                               Genre  \\\n",
-       "0  *Sensationsdrama*Schauspiel*Drama   \n",
-       "\n",
-       "                                          All titles  \n",
-       "0  *Original Title:*Afgrunden*Further Title:*Fräu...  "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The HTTP server returned a redirect error that would lead to an infinite loop.\n",
+      "The last 30x error message was:\n",
+      "Moved Temporarilyfor id 970\n"
+     ]
     }
    ],
    "source": [
     "#film with more than one genre\n",
     "#id 75\n",
-    "create_df_film(75)\n"
+    "create_df_film(970)\n"
    ]
   },
   {
@@ -449,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2019-10-24 19:56:52.816279\n"
+      "start 2019-10-24 21:07:37.738880\n"
      ]
     }
    ],
@@ -465,14 +413,13 @@
     "\n",
     "\n",
     "print(\"start\",datetime.now())   \n",
-    "for i in range(99,10000): \n",
+    "for i in range(1000,10000): \n",
     "    try:\n",
     "        df=df.append(create_df_film(i),sort=False,ignore_index=True)\n",
-    "        time.sleep(1)\n",
     "    except:\n",
     "        print(\"problem with id\" , str(i))\n",
     "        raise\n",
-    "df.to_csv('export_early_cinema_10000.csv')\n",
+    "df.to_csv('export_early_cinema_1000_10000.csv')\n",
     "\n",
     "print(\"finish\",datetime.now())"
    ]
