correction NO_TITLE

--- a/notebooks/early_correction_loop.ipynb
+++ b/notebooks/early_correction_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,6 @@
     "        soup = BeautifulSoup(page, \"lxml\")\n",
     "        #the div where the information is\n",
     "        div_interested = soup.find('div', id='frame1update')\n",
-    "\n",
-    "        #print(div_interested)\n",
-    "        ##title + date\n",
-    "        title_date = div_interested.find('h2', class_='title').contents[0]\n",
     "        dateFilms= []\n",
     "        titles = []\n",
     "        filmLenghts= []\n",
@@ -40,18 +36,25 @@
     "        #filmCountries= []\n",
     "        filmCompanies= []\n",
     "        filmGenres= []\n",
+    "        \n",
+    "        ##title + date\n",
+    "        if(div_interested.find('h2', class_='title')):\n",
+    "            title_date = div_interested.find('h2', class_='title').contents[0]\n",
     "\n",
-    "        ##*************Film date***************\n",
-    "        date_film =re.search('(\\d+)',title_date)\n",
-    "        if(date_film):\n",
-    "            dateFilms.append(date_film.group())\n",
-    "            ##*************Film title***************\n",
-    "            title = title_date.split(\"(\"+date_film.group())\n",
-    "            titles.append(title[0].lstrip().rstrip())\n",
+    "\n",
+    "            ##*************Film date***************\n",
+    "            date_film =re.search('(\\d+)',title_date)\n",
+    "            if(date_film):\n",
+    "                dateFilms.append(date_film.group())\n",
+    "                ##*************Film title***************\n",
+    "                title = title_date.split(\"(\"+date_film.group())\n",
+    "                titles.append(title[0].lstrip().rstrip())\n",
+    "            else:\n",
+    "                dateFilms.append(\"NO_DATE\")\n",
+    "                titles.append(title_date)\n",
     "        else:\n",
     "            dateFilms.append(\"NO_DATE\")\n",
-    "            titles.append(title_date)\n",
-    "\n",
+    "            titles.append(\"NO_TITLE\")\n",
     "        #****************Film Lenght*************************\n",
     "        #can have more than one parameter \n",
     "        #example film id=6\n",
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +241,7 @@
        "0                     *Further Title:*Der Abbruch des berühmten Star...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -287,12 +290,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>NO_DATE</td>\n",
-       "      <td>495</td>\n",
-       "      <td>\\r\\n  Angriff auf Poithmouth</td>\n",
-       "      <td>*k.Ang. (?)</td>\n",
-       "      <td>*241 Meter</td>\n",
+       "      <td>17760</td>\n",
+       "      <td>NO_TITLE</td>\n",
        "      <td></td>\n",
-       "      <td>*Nicht-fiktional</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -300,20 +303,20 @@
        "</div>"
       ],
       "text/plain": [
-       "      Date id early database                         Title    Companies  \\\n",
-       "0  NO_DATE               495  \\r\\n  Angriff auf Poithmouth  *k.Ang. (?)   \n",
+       "      Date id early database     Title Companies Film lenght Film pricing  \\\n",
+       "0  NO_DATE             17760  NO_TITLE                                      \n",
        "\n",
-       "  Film lenght Film pricing             Genre All titles  \n",
-       "0  *241 Meter               *Nicht-fiktional             "
+       "  Genre All titles  \n",
+       "0                   "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "create_df_film(495)\n"
+    "create_df_film(17760)\n"
    ]
   },
   {
@@ -390,14 +393,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2019-10-24 21:07:37.738880\n"
+      "start 2019-10-24 21:58:28.959863\n",
+      "The HTTP server returned a redirect error that would lead to an infinite loop.\n",
+      "The last 30x error message was:\n",
+      "Moved Temporarilyfor id 15218\n",
+      "problem with id 17760\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'contents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-1637eaccd1d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mdf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcreate_df_film\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"problem with id\"\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-26-605c494ba11c>\u001b[0m in \u001b[0;36mcreate_df_film\u001b[0;34m(id)\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;31m#print(div_interested)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;31m##title + date\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0mtitle_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiv_interested\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'h2'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0mdateFilms\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mtitles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'contents'"
      ]
     }
    ],
@@ -413,13 +432,13 @@
     "\n",
     "\n",
     "print(\"start\",datetime.now())   \n",
-    "for i in range(1000,10000): \n",
+    "for i in range(10000,20000): \n",
     "    try:\n",
     "        df=df.append(create_df_film(i),sort=False,ignore_index=True)\n",
     "    except:\n",
     "        print(\"problem with id\" , str(i))\n",
     "        raise\n",
-    "df.to_csv('export_early_cinema_1000_10000.csv')\n",
+    "df.to_csv('export_early_cinema_10000_20000.csv')\n",
     "\n",
     "print(\"finish\",datetime.now())"
    ]
